alterações no potfolio

--- a/html/index.html
+++ b/html/index.html
@@ -23,16 +23,21 @@
                 em programa de dados.</p>
         </section>
 
-        <br/>
-        
+        <br />
+
         <section id="midias">
             <audio controls>
                 <source src="../audio/music.mpeg" type="audio/mpeg" />
             </audio>
+            <br />
+            <br />
+            <video width="400" height="240" controls>
+                <source src="../video/video.mp4" tyoe="video/mp4" />
+            </video>
 
         </section>
 
-        <br/>
+        <br />
 
         <section id="redes">
             <a href="https://WWW.linkedin.com/in/monica ribeiro/">acessa meu linkedin</a>
@@ -42,7 +47,9 @@
         <a href="./skills.html">começa minhas skills</a>
 
     </main>
-
+    <footer>
+        <h5>SENAC-PE | Porto Digital | Curso Full-Stack</h5>
+    </footer>
 
 </body>
 
