--- a/html/index.html
+++ b/html/index.html
@@ -1,56 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <title>Monica</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>layout</title>
 </head>
-
 <body>
 
-    <main>
+    <div class="background">
+        <header>
+            <div class="logo">
+                <i class="fa-regular fa-m"></i>
+            </div><!--logo-->
 
-        <section id="sobre">
-            <h1>Portfólio Mônica Ribeiro</h1>
-            <img src="../images/monica.jpg" width="200px">
+            <div class="cabeçalho-link">
+                <li>
+                    <a href="#">Home</a>
+                </li>
 
-            <h4> Olá! </h4>
-            <p>Sou mãe de duas filhas lindas e empresária na linha de Ótica, associado a isso estou atuano na área de RH
-                em Empresa pública.</p>
-            <p>Estou estudando no SENAC o curso de desenvolvimento Full Stack, no intuito de abranger o meu conhecimento
-                em programa de dados.</p>
-        </section>
+                <li>
+                    <a href="#">Sobre</a>
+                </li>
 
-        <br />
+                <li>
+                    <a href="#">Serviços</a>
+                </li>
 
-        <section id="midias">
-            <audio controls>
-                <source src="../audio/music.mpeg" type="audio/mpeg" />
-            </audio>
-            <br />
-            <br />
-            <video width="400" height="240" controls>
-                <source src="../video/video.mp4" tyoe="video/mp4" />
-            </video>
+                <li>
+                    <a href="#">Trabalho</a>
+                </li>
+                <button>Meu Contato</button>
+            </div><!--cabeçalho-link-->
+        </header>
 
-        </section>
+        <div class="container-text">
+            <div class="text">
+                <h3>Olá, Pessoal!</h3>
+                <h1>Me chamo <span>Mônica Ribeiro</span></h1>
+                <p>Gestão de Pessoas | RH<br>Consultóra no Ramo Ótico </p>
+                <div class="redes-social">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
 
-        <br />
+                    
+                    
+                </div><!--redes-social-->
+                <button class="btn">Perfil</button>
+            </div><!--text-->
+        </div><!--container-text-->
+    </div><!--background-->
 
-        <section id="redes">
-            <a href="https://WWW.linkedin.com/in/monica ribeiro/">acessa meu linkedin</a>
 
-        </section>
-        <br /><br />
-        <a href="./skills.html">começa minhas skills</a>
 
-    </main>
-    <footer>
-        <h5>SENAC-PE | Porto Digital | Curso Full-Stack</h5>
-    </footer>
+    <script type="script.js"></script>    
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
 </body>
-
 </html>
